--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".DodgeMain"
                   android:label="@string/app_name"
-                  android:screenOrientation="portrait"
+                  android:screenOrientation="landscape"
                   android:configChanges="orientation|keyboard|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
