--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto"
-      package="com.dozingcatsoftware.dodge"
-      android:versionName="1.4.3" android:versionCode="8">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="oj.game.surprise"
+    android:installLocation="auto"
+    android:versionCode="8"
+    android:versionName="1.4.3" >
 
     <uses-sdk android:minSdkVersion="4" />
-    
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".DodgeMain"
-                  android:label="@string/app_name"
-                  android:screenOrientation="landscape"
-                  android:configChanges="orientation|keyboard|keyboardHidden" >
-            <intent-filter>
+
+    <application
+        android:icon="@drawable/orangefresh"
+        android:label="OjSurprise" >
+        <activity
+            android:name="MainActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden"
+            android:label="OjSurprise"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="Splash"
+            android:screenOrientation="landscape" >
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-    
-<activity android:name="DodgeAbout"
-          android:screenOrientation="landscape">
-</activity>
-
-<activity android:name="DodgePreferences" android:screenOrientation="landscape"></activity>
-</application>
+          <activity
+            android:name="Game"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="DodgePreferences"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="Help"
+            android:screenOrientation="landscape" >
+        </activity>
+    </application>
 
 </manifest>
